examples/test/testpolicy10619.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10619
  namespace: namespace303
spec:
  podSelector:
    matchLabels:
      key46: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value13
          key23: value23
      podSelector:
        matchLabels:
          key11: value11
          key37: value3
          key0: value29
